--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -56,7 +56,7 @@ subprojects {
     jar {
         manifest {
             attributes 'Implementation-Title': project.name,
-                    'Implementation-Version': project.version,
+                    'Implementation-Version': version,
                     'Built-By': System.getProperty('user.name'),
                     'Built-Date': new Date(),
                     'Built-JDK': System.getProperty('java.version'),
