--- a/jitpack.yml
+++ b/jitpack.yml
@@ -2,4 +2,4 @@ jdk:
   - openjdk11
 
 install:
-  - ./gradlew publishToMavenLocal
+  - lib/gradlew --project-dir lib publishToMavenLocal --project-prop version=${VERSION}
