--- a/lib/gradle.properties
+++ b/lib/gradle.properties
@@ -1,3 +1,6 @@
 signing.keyId=435D2767
 signing.password=****
 signing.secretKeyRingFile=/****/.gnupg/secring.gpg
+
+ossrhUsername=****
+ossrhPassword=****
