--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -1,18 +1,15 @@
-//buildscript {
+buildscript {
 //    repositories {
 //        mavenCentral()
-        //Needed only for SNAPSHOT versions
-        //maven { url "http://oss.sonatype.org/content/repositories/snapshots/" }
 //    }
-//    dependencies {
-//        classpath "io.codearte.gradle.nexus:gradle-nexus-staging-plugin:0.22.0"
-//    }
-//}
+    dependencies {
+        classpath "io.codearte.gradle.nexus:gradle-nexus-staging-plugin:0.22.0"
+    }
+}
 
 // define all versioned plugins here and apply in subprojects as necessary without version
 plugins {
     id 'com.github.sherter.google-java-format' version '0.9' apply false
-//    id 'io.codearte.nexus-staging'
 }
 
 subprojects {
@@ -27,6 +24,7 @@ subprojects {
     apply plugin: 'com.github.sherter.google-java-format'
     apply plugin: 'signing'
     apply plugin: 'maven'
+    apply plugin: 'io.codearte.nexus-staging'
 
     sourceCompatibility = JavaVersion.VERSION_1_8
     targetCompatibility = JavaVersion.VERSION_1_8
@@ -70,7 +68,7 @@ subprojects {
     jar {
         manifest {
             attributes 'Implementation-Title': project.name,
-                    'Implementation-Version': version,
+                    'Implementation-Version': project.version,
                     'Built-By': System.getProperty('user.name'),
                     'Built-Date': new Date(),
                     'Built-JDK': System.getProperty('java.version'),
@@ -80,28 +78,6 @@ subprojects {
     /* JAR */
 
     /* PUBLISHING */
-//    publishing {
-//        publications {
-//            mavenJava(MavenPublication) {
-//                from components.java
-//                artifactId = "jib-entrypoint-prefix-extension-gradle"
-//            }
-//        }
-//
-//        repositories {
-//            maven {
-//                def staging = "https://oss.sonatype.org/service/local/staging/deploy/maven2"
-//                def snapshot = "https://oss.sonatype.org/content/repositories/snapshots"
-//
-//                url = version.endsWith('SNAPSHOT') ? snapshot : staging
-//
-//                credentials {
-//                    username = findProperty('ossrhUsername')
-//                    password = findProperty('ossrhPassword')
-//                }
-//            }
-//        }
-//    }
     task javadocJar(type: Jar) {
         classifier = 'javadoc'
         from javadoc
@@ -161,16 +137,7 @@ subprojects {
             }
         }
     }
-
-
     /* PUBLISHING */
-
-    /* RELEASING */
-//    nexusStaging {
-//        packageGroup = "com.artemkaxboy" //optional if packageGroup == project.getGroup()
-//        stagingProfileId = "artemkaxboy"
-//    }
-    /* RELEASING */
 
     /* SIGNING */
     signing {
