--- a/lib/gradle.properties
+++ b/lib/gradle.properties
@@ -4,3 +4,5 @@ signing.secretKeyRingFile=/****/.gnupg/secring.gpg
 
 ossrhUsername=****
 ossrhPassword=****
+
+gnsp.disableApplyOnlyOnRootProjectEnforcement=true
