- adds maven extension

--- a/lib/settings.gradle
+++ b/lib/settings.gradle
@@ -3,6 +3,6 @@ rootProject.name = 'jib-entrypoint-prefix-extension'
 include ":lib-gradle"
 project(":lib-gradle").name = "jib-entrypoint-prefix-extension-gradle"
 
-//include ':lib-maven'
-//project(":lib-maven").name = "jib-entrypoint-prefix-extension-maven"
+include ':lib-maven'
+project(":lib-maven").name = "jib-entrypoint-prefix-extension-maven"
 
