--- a/lib/gradle.properties
+++ b/lib/gradle.properties
@@ -1,3 +1,4 @@
+# suppress inspection "UnusedProperty" for whole file
 signing.keyId=435D2767
 signing.password=****
 signing.secretKeyRingFile=/****/.gnupg/secring.gpg
