* adds entrypoint and entrypoint suffix customization

--- a/sample-gradle-java/build.gradle
+++ b/sample-gradle-java/build.gradle
@@ -4,8 +4,12 @@
 
 buildscript {
 
+    repositories {
+        mavenLocal()
+    }
+
     dependencies {
-        classpath "com.artemkaxboy:jib-custom-entrypoint-extension-gradle:0.0.1"
+        classpath "com.artemkaxboy:jib-custom-entrypoint-extension-gradle:0.0-SNAPSHOT"
     }
 }
 
