--- a/sample-gradle-java/build.gradle
+++ b/sample-gradle-java/build.gradle
@@ -61,7 +61,7 @@ jib {
             implementation = "com.artemkaxboy.jib.gradle.extension.entrypointprefix.JibEntrypointPrefixExtension"
             configuration {
                 setEntrypointPrefix("/files/wait-for-it.sh google.com:80 --")
-                setEntrypointSuffix("suffix")
+                setEntrypointSuffix("gradle-java suffix")
             }
         }
     }
