--- a/sample-maven-java/pom.xml
+++ b/sample-maven-java/pom.xml
@@ -22,8 +22,8 @@
         </dependency>
         <dependency>
             <groupId>com.artemkaxboy</groupId>
-            <artifactId>jib-custom-entrypoint-extension-gradle</artifactId>
-            <version>0.0.1</version>
+            <artifactId>jib-custom-entrypoint-extension-maven</artifactId>
+            <version>0.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
 
@@ -43,8 +43,8 @@
                     </dependency>
                     <dependency>
                         <groupId>com.artemkaxboy</groupId>
-                        <artifactId>jib-custom-entrypoint-extension-gradle</artifactId>
-                        <version>0.0.1</version>
+                        <artifactId>jib-custom-entrypoint-extension-maven</artifactId>
+                        <version>0.0-SNAPSHOT</version>
                     </dependency>
                 </dependencies>
 
@@ -71,43 +71,15 @@
                     </extraDirectories>
 
                     <pluginExtensions>
-                        <pluginExtension>
-                            <implementation>com.google.cloud.tools.jib.maven.extension.layerfilter.JibLayerFilterExtension</implementation>
-                            <configuration implementation="com.google.cloud.tools.jib.maven.extension.layerfilter.Configuration">
-                                <filters>
-                                    <!-- Delete all jar files (unless they match the filters below). -->
-                                    <filter>
-                                        <glob>**/*.jar</glob>
-                                    </filter>
-                                    <!-- However, retain and move google-*.jar into the new "google libraries" layer. -->
-                                    <filter>
-                                        <glob>**/google-*.jar</glob>
-                                        <toLayer>google libraries</toLayer>
-                                    </filter>
-                                    <!-- Also retain and move in-house-*.jar into the new "in-house dependencies" layer. -->
-                                    <filter>
-                                        <glob>/app/libs/in-house-*.jar</glob>
-                                        <toLayer>in-house dependencies</toLayer>
-                                    </filter>
-                                    <!-- These go into the same "in-house dependencies" layer. -->
-                                    <filter>
-                                        <glob>/app/libs/other-in-house-*.jar</glob>
-                                        <toLayer>in-house dependencies</toLayer>
-                                    </filter>
-                                    <filter>
-                                        <glob>/nothing/matches/this/filter</glob>
-                                        <toLayer>this layer will not be created</toLayer>
-                                    </filter>
-                                </filters>
-                            </configuration>
-                        </pluginExtension>
 
                         <pluginExtension>
-                            <implementation>com.artemkaxboy.jib.maven.extension.entrypointprefix.entrypointprefix.JibEntrypointPrefixExtension</implementation>
-                            <configuration implementation="com.artemkaxboy.jib.maven.extension.entrypointprefix.entrypointprefix.Configuration">
-                                <entrypointPrefix>
-                                    <entrypointPrefix>echo</entrypointPrefix>
-                                </entrypointPrefix>
+                            <implementation>
+                                com.artemkaxboy.jib.maven.extension.entrypointprefix.JibEntrypointPrefixExtension
+                            </implementation>
+                            <configuration
+                                    implementation="com.artemkaxboy.jib.maven.extension.entrypointprefix.Configuration">
+                                <entrypointPrefix>/files/wait-for-it.sh google.com:80 --</entrypointPrefix>
+                                <entrypointSuffix>maven-java suffix</entrypointSuffix>
                             </configuration>
                         </pluginExtension>
                     </pluginExtensions>
