--- a/sample-gradle-java/build.gradle
+++ b/sample-gradle-java/build.gradle
@@ -33,7 +33,7 @@ jib {
     }
 
     to {
-        image = "jib-custom-prefix"
+        image = "jib-custom-entrypoint"
     }
 
     // copy custom script into image and make it executable
@@ -58,7 +58,7 @@ jib {
     // port 80 at google.com and then runs the java app.
     pluginExtensions {
         pluginExtension {
-            implementation = "com.artemkaxboy.jib.gradle.extension.entrypointprefix.JibEntrypointPrefixExtension"
+            implementation = "com.artemkaxboy.jib.gradle.extension.customentrypoint.JibCustomEntrypointExtension"
             configuration {
                 setEntrypointPrefix("/files/wait-for-it.sh google.com:80 --")
                 setEntrypointSuffix("gradle-java suffix")
