--- a/sample-gradle-java/settings.gradle
+++ b/sample-gradle-java/settings.gradle
@@ -1,2 +1,2 @@
-// rootProject.name will be used as a docker image name
+// rootProject.name will be used as a docker image name by default
 rootProject.name = "sample-gradle-java"
