--- a/sample-maven-java/pom.xml
+++ b/sample-maven-java/pom.xml
@@ -4,9 +4,9 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.artemkaxboy</groupId>
     <artifactId>sample-maven-java</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>1.0-SNAPSHOT</version>
     <name>sample-maven-java</name>
-    <description>Demo project for Spring Boot</description>
+    <description>Demo Project</description>
 
     <properties>
         <java.version>11</java.version>
@@ -14,47 +14,37 @@
         <maven.compiler.target>11</maven.compiler.target>
     </properties>
 
-    <dependencies>
-        <dependency>
-            <groupId>com.google.cloud.tools</groupId>
-            <artifactId>jib-layer-filter-extension-maven</artifactId>
-            <version>0.1.0</version>
-        </dependency>
-        <dependency>
-            <groupId>com.artemkaxboy</groupId>
-            <artifactId>jib-custom-entrypoint-extension-maven</artifactId>
-            <version>0.0-SNAPSHOT</version>
-        </dependency>
-    </dependencies>
-
     <build>
         <plugins>
             <plugin>
+                <!-- Add jib-maven-plugin -->
                 <groupId>com.google.cloud.tools</groupId>
                 <artifactId>jib-maven-plugin</artifactId>
                 <version>2.7.0</version>
 
-                <!-- 1. have extension classes available on Jib's runtime classpath -->
+                <!-- Have extension classes available on Jib's runtime classpath -->
                 <dependencies>
-                    <dependency>
-                        <groupId>com.google.cloud.tools</groupId>
-                        <artifactId>jib-layer-filter-extension-maven</artifactId>
-                        <version>0.1.0</version>
-                    </dependency>
                     <dependency>
                         <groupId>com.artemkaxboy</groupId>
                         <artifactId>jib-custom-entrypoint-extension-maven</artifactId>
-                        <version>0.0-SNAPSHOT</version>
+                        <version>0.1.0</version>
                     </dependency>
                 </dependencies>
 
                 <configuration>
+
+                    <!-- Default image does not contain anything except java, even shell,
+                     but adoptopenjdk does. We need it to run our wait-for-it.sh-->
                     <from>
                         <image>adoptopenjdk:11-jdk</image>
                     </from>
+
+                    <!-- override default image name -->
                     <to>
                         <image>jib-custom-entrypoint</image>
                     </to>
+
+                    <!-- copy custom script from current directory into image and make it executable -->
                     <extraDirectories>
                         <paths>
                             <path>
@@ -72,6 +62,11 @@
 
                     <pluginExtensions>
 
+                        <!-- https://docs.docker.com/compose/startup-order/ -->
+                        <!-- According the official docker guide, https://github.com/vishnubob/wait-for-it is one of -->
+                        <!-- recommended ways to control containers startup order. -->
+                        <!-- Add prefix to an image entrypoint which runs wait-for-it.sh. -->
+                        <!-- Script checks availability of port 80 at google.com and then runs the java application with arguments. -->
                         <pluginExtension>
                             <implementation>
                                 com.artemkaxboy.jib.maven.extension.customentrypoint.JibCustomEntrypointExtension
