--- a/.github/workflows/any.yml
+++ b/.github/workflows/any.yml
@@ -31,14 +31,19 @@ jobs:
         with:
           java-version: 11
 
-      - name: Run check
-        # @doc https://github.com/eskatos/gradle-command-action
+      - name: Prepare to publish
+        run: |
+          echo '${{secrets.GPG_KEY_CONTENTS}}' | base64 -d > publish_key.gpg
+          gpg --quiet --batch --yes --decrypt --passphrase="${{secrets.GPG_SECRET_PASSPHRASE}}" \
+            --output secret.gpg publish_key.gpg
+
+      - name: Publish with Gradle
         uses: eskatos/gradle-command-action@v1
         with:
           arguments: |
-            sign getStagingProfile -i
-              -Psigning.password=${{ secrets.SIGNING_PASSWORD }}
-              -PossrhUsername=${{ secrets.OSSRH_USERNAME }}
-              -PossrhPassword=${{ secrets.OSSRH_PASSWORD }}
+            sign getStagingProfile -i -Psigning.secretKeyRingFile=secret.gpg
+              -Psigning.password=${{secrets.SIGNING_PASSWORD}}
+              -PossrhUsername=${{secrets.OSSRH_USERNAME}}
+              -PossrhPassword=${{secrets.OSSRH_PASSWORD}}
           wrapper-directory: lib
           build-root-directory: lib
