--- a/.github/workflows/any.yml
+++ b/.github/workflows/any.yml
@@ -41,7 +41,7 @@ jobs:
         uses: eskatos/gradle-command-action@v1
         with:
           arguments: |
-            sign getStagingProfile -i -Psigning.secretKeyRingFile=secret.gpg
+            sign getStagingProfile -i -Psigning.secretKeyRingFile=~/secret.gpg
               -Psigning.password=${{secrets.SIGNING_PASSWORD}}
               -PossrhUsername=${{secrets.OSSRH_USERNAME}}
               -PossrhPassword=${{secrets.OSSRH_PASSWORD}}
