--- a/.github/workflows/any.yml
+++ b/.github/workflows/any.yml
@@ -41,9 +41,11 @@ jobs:
         uses: eskatos/gradle-command-action@v1
         with:
           arguments: |
-            sign getStagingProfile -i -Psigning.secretKeyRingFile=${{github.WORKSPACE}}/secret.gpg
+            uploadArchives closeRepository
+              -Psigning.secretKeyRingFile=${{github.WORKSPACE}}/secret.gpg
               -Psigning.password=${{secrets.SIGNING_PASSWORD}}
               -PossrhUsername=${{secrets.OSSRH_USERNAME}}
               -PossrhPassword=${{secrets.OSSRH_PASSWORD}}
+              -Pversion=0.0.4
           wrapper-directory: lib
           build-root-directory: lib
