- update action trigger

--- a/.github/workflows/any.yml
+++ b/.github/workflows/any.yml
@@ -3,8 +3,9 @@ name: Default branch verification
 
 on:
   push:
-    branches:
-      - publishing
+    tags:
+      - v*.*
+      - v*.*.*
 
 jobs:
 
